<resources>
    <string name="app_name">Eventogether</string>
    <string name="text_company_logo">Company logo</string>
    <string name="text_icon">Icon</string>
    <string name="btnAppointments_title">Creeër een evenement</string>
    <string name="btnScan_title">Scan een promotie code</string>
    <string name="btnChat_title">Open locale chat</string>
    <string name="search_bar_text">Zoek naar evenement</string>
    <string name="text_nearby_events">Evenementen bij jou in de buurt</string>
    <string name="text_search">Search</string>
    <string name="btnPopular1_title">Popular event 1</string>
    <string name="text_profile_icon">Profile icon</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="profile_picture">Profile picture</string>
    <string name="add_image_button_text">Add image button</string>
    <string name="message_hint_text">Stel een vraag…</string>
    <string name="send_message_button_text">Send message button</string>
    <string name="log_out_text">Log uit</string>
    <string name="log_in_text">Log in</string>
    <string name="sign_in_text_email">Meld u aan met email</string>
    <string name="sign_in_text_google">Meld u aan met Google</string>
    <string name="text_signing_in">Aanmelden...</string>
    <string name="text_login_method">Kies een login methode</string>
    <string name="hyperlink_tos">https://</string>
    <string name="hyperlink_privacy">https://</string>
    <string name="text_privacy"><u>Privacy Policy</u></string>
    <string name="text_terms_of_service"><u>Terms of Service</u></string>
    <string name="text_picture">picture</string>
    <string name="text_camera_rights">Accepteer aub de camera rechten voor deze app</string>
    <string name="btn_add_event">Voeg een evenement toe</string>
    <string name="text_event_add_succes">Het evenement is toegevoegd</string>
    <string name="text_event_delete_success">Het evenement is verwijderd</string>
    <string name="text_navigate_forward">Navigate forward</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hero_image">Hero image</string>
    <string name="text_delete_event">Verwijder dit evenement</string>
    <string name="event_information1">Evenement locatie</string>
    <string name="event_information2">Evenement tijd</string>
    <string name="event_information3">Evenement datum</string>
    <string name="text_dropdown_arrow">Dropdown arrow</string>
    <string name="time_picker_title_reminder">Kies een tijd voor uw herinnering</string>
    <string name="title_reminder">Evenement herinnering</string>
    <string name="text_reminder">Het is tijd voor uw evenement</string>
    <string name="text_reminder_big">Dit is een herinnering voor uw evenement</string>
    <string name="btn_delete_reminder">Delete reminder</string>
    <string name="reminder_text">Dagelijks herhalen</string>
    <string name="text_reminders">Herinneringen</string>
    <string name="add_reminder_text">Stel een nieuwe herinnering in</string>
    <string name="login_error_text">Er is een probleem met uw account. Probeer uw aacount opnieuw in te stellen</string>
    <string name="login_succes_text">U bent ingelogd</string>
    <string name="logout_succes_text">U bent uitgelogd</string>
    <string name="greeting_message_text">Hey! Leuk dat je even komt kijken. Je bent de eerste hier, maar voel je vrij om hier een berichtje te plaatsen</string>
    <string name="load_empty_event_list">Er zijn geen evenementen gevonden in uw lijst</string>
    <string name="camera_rights_text">Accepteer aub de camera rechten voor deze app om gebruik te maken van deze functie</string>
    <string name="text_location_rights">Accepteer aub de locatie rechten om deze app te kunnen gebruiken</string>
    <string name="text_next_item">Next item</string>
    <string name="text_previous_item">Previous item</string>
    <string name="text_continue">Continue</string>
    <string name="text_event">Event name</string>
    <string name="text_event_type">Event type</string>
    <string name="event_expandable_list_group1_custom_text">Meer informatie</string>
    <string name="event_expandable_list_group2_custom_text">Rating:</string>
    <string name="event_expandable_list_group3_custom_text">Tickets zijn beschikbaar via:</string>
</resources>