<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FocusEventFragment">

    <data>

        <variable
            name="event"
            type="com.company.eventogether.model.EventDTO" />

        <variable
            name="reminder"
            type="com.company.eventogether.model.ReminderDTO" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topGroup"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageHolderEventHero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/eventImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    app:shapeAppearanceOverlay="@style/right_corner_cut"
                    app:strokeColor="@color/dark_blue"
                    app:strokeWidth="0dp" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/middleGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border_transparent_background"
            app:layout_constraintBottom_toTopOf="@+id/middleGroup2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topGroup">

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/calibri"
                android:gravity="center|start"
                android:text="@{event.info.title}"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/calibri"
                android:gravity="top|start"
                android:text="@{event.info.description}"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                android:textStyle="normal"
                android:maxLines="2"
                android:ellipsize="end"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middleGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border_transparent_background"
            app:layout_constraintBottom_toTopOf="@+id/middleGroup3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middleGroup1">

            <TextView
                android:id="@+id/textViewReminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/calibri"
                android:gravity="center|start"
                android:text="@string/text_reminders"
                android:textColor="@color/dark_blue"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchRecurring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:checked="@{reminder.isActive}"
                android:scaleX="1"
                android:scaleY="1"
                app:thumbTint="@drawable/custom_switch"
                app:trackTint="@color/grey_faded" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middleGroup3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@drawable/border_transparent_background"
            app:layout_constraintBottom_toTopOf="@+id/bottomGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middleGroup2">

            <pokercc.android.expandablerecyclerview.ExpandableRecyclerView
                android:id="@+id/expandableListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingStart="55dp"
                android:paddingEnd="10dp"
                android:stateListAnimator="@null"
                android:text="@string/text_delete_event"
                android:textAllCaps="false"
                app:cornerRadius="0dp"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/iconDelete"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/text_icon"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/bottomGroup"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_delete_24"
                app:tint="@color/white"
                tools:ignore="RedundantDescriptionCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>